--- a/public/css/diego.css
+++ b/public/css/diego.css
@@ -38,3 +38,54 @@
 	float:left;
 	margin-left:308px;
 }
+#content-form{
+	width:602px;
+	height:1000px;
+	background-color:#FFF;
+	margin-top:14px;
+	padding:100px 0px 0px 0px;
+	margin-left:auto;
+	margin-right:auto;
+	background-image:url(../img/deja-dato.jpg);
+	background-repeat:no-repeat;
+	background-position:top;
+	/*para Firefox*/
+	-moz-border-radius: 10px 10px 10px 10px;
+	/*para Safari y Chrome*/
+	-webkit-border-radius: 10px 10px 10px 10px;
+	/* para Opera */
+	border-radius: 10px 10px 10px 10px;
+	-webkit-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.34);
+	-moz-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.34);
+	box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.34);
+}
+#content-form h1{
+	font-size:18px;
+	width:auto;
+	height:auto;
+}
+.form-in{
+	width:582px;
+	height:auto;
+	float:left;
+	padding-left:20px;
+}
+.dato-in{
+	width:271px;
+	height:82px;
+	float:left;
+	text-align:left;
+	font-size:18px;
+	margin:10px 0px 0px 10px;
+}
+.dato-in .input-in{
+	width:267px;
+	height:53px;
+		/*para Firefox*/
+	-moz-border-radius: 10px 10px 10px 10px;
+	/*para Safari y Chrome*/
+	-webkit-border-radius: 10px 10px 10px 10px;
+	/* para Opera */
+	border-radius: 10px 10px 10px 10px;
+	outline:none;
+}
