--- a/public/css/main.css
+++ b/public/css/main.css
@@ -118,6 +118,14 @@ header li a:hover{border-radius:5px; background: #fff; color:#5b5b5b; }
 .rating .mark:hover{background-position: 0 -22px; }
 .rating .mark.active:hover{background-position: 0 0; opacity:0.8;}
 
+/* Categories */
+.categories{background: url("../img/bg-menu-categories.png") center top no-repeat; height: 85px;}
+.categories ul{width: 960px; margin: 0 auto; overflow: hidden;}
+.categories li{display: block; float: left; }
+.categories li a{display: block;color: #fff; text-decoration: none; line-height: 49px; margin-top: 17px; padding:0 20px; text-transform: uppercase; font-size: 22px;}
+.categories li a:hover,
+.categories li a.active{background: #f00;}
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
