--- a/public/css/main.css
+++ b/public/css/main.css
@@ -70,6 +70,8 @@ h2 span{text-shadow:none;}
 h2.title{font-family:'cheap_pine_sanssans';  text-transform: uppercase; line-height: 80px; font-size:48px; background: url('../img/bg-title.png') top center no-repeat; margin:0 auto; display: block; }
 h2.city-title{font-family:'cheap_pine_sanssans';height: 147px;text-transform: uppercase; line-height: 140px; font-size:100px; background: url('../img/bg-city-title.png') top center no-repeat; margin:0 auto; display: block; }
 h2.city-title span{display: block; font-size: 30px; line-height: 30px; display: block; margin-top: -20px;  }
+h3.lugar{font-family: 'cheap_pine_sanssans';height: 73px;text-transform: uppercase;line-height: 75px;font-size: 3em;margin: 0 auto;display: block;}
+h4.autor{font-family: Helvetica, Arial, sans-serif;height: 26px;text-transform: uppercase;line-height: 30px;font-size: 0.6em;text-align: center;margin: 0 auto; display: block;background: url(../img/bg_city_autor.png) no-repeat 0 0;width: 310px;}
 
 /* HEADER */
 header{background:url("../img/bg-menu-top.png"); height: 51px; }
