--- a/public/css/main.css
+++ b/public/css/main.css
@@ -158,6 +158,21 @@ header li a:hover{border-radius:5px; background: #fff; color:#5b5b5b; }
 .detalle_city .shared .tw{  background: url(../img/btn_twitter.png) no-repeat 0 0; width:185px; height:46px; display:block; float:left; cursor:pointer;}
 
 
+/* BUSCANDO A JENNY */
+.jenny { margin:1em auto; position:relative;}
+.jenny .title_jenny{font-family: 'boogalooregular';font-size: 1em;color: #d70303;text-shadow: none;text-align: left; clear:both; width:670px; margin:1em auto;}
+.jenny .video{background: #000; width:690px;height:436px;display: block;margin: 0 auto; padding:0;}
+.jenny .video iframe{ width:674px;height:379px;display: block;margin: 0 auto;padding:0; border:none;}
+.jenny .shared {  width:674px; height:46px; display:block; margin: 1em auto;}
+.jenny .shared .face{ background:url(../img/btn_facebook.png) no-repeat 0 0; width:182px; height:46px; display:block; float:right;}
+.jenny .shared .tw{  background: url(../img/btn_twitter.png) no-repeat 0 0; width:185px; height:46px; display:block;  float:right;}
+.jenny .separate {   height:10px; clear:both;}
+.jenny .miniaturas{ width:980px; margin:1em auto; padding:0; min-height:500px;}
+.jenny .miniaturas .thumbs{ width: 286px;height: 265px;float: left;margin: 0 20px 0 0;padding: 30px 0 0 20px;background: url(../img/bg_thumbs_videos.png) no-repeat 0 0;}
+.jenny .miniaturas .thumbs img{ float:left; margin:0; padding:0;}
+.jenny .miniaturas .thumbs .vervideo{ float:right; background:url(../img/btn_vervideo.png) no-repeat 0 0; width:129px; height:39px; display:block; margin: 10px 20px 0 0; padding:0;}
+.jenny .miniaturas .thumbs h2{font-family: 'boogalooregular';font-size: 0.7em; color: #d70303;text-shadow: none;text-align: left; margin:1em auto;}
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
