--- a/public/css/main.css
+++ b/public/css/main.css
@@ -83,8 +83,8 @@ header ul li{float:left; padding: 12px 22px; padding-top: 8px; background: top l
 header ul li:first-child{background: none;}
 header li a{ color:#fff; font-size: 24px; line-height: 31px; text-decoration: none; padding: 2px; font-weight: normal; }
 header li a:hover{border-radius:5px; background: #fff; color:#5b5b5b; }
-.logo{text-align: center; margin: 0 auto; display: block; padding-top: 20px;}
-
+.logo{text-align: center; margin: 0 auto; display: block; padding-top: 20px; max-width: 80%;}
+header .mobile{display: none;}
 
 
 /* Search Box */
@@ -100,6 +100,7 @@ header li a:hover{border-radius:5px; background: #fff; color:#5b5b5b; }
 .black-btn{background: url('../img/bg-btn-cotiza-pasaje.png') no-repeat; width: 248px; height: 40px; display: block; line-height: 40px; color: #fff; text-decoration: none; text-align: center; margin:10px auto; }
 
 .nav{margin:20px 0;}
+.nav a img{ max-width: 80%;}
 .nav a:hover{opacity:0.8;}
 
 /************************************************************
@@ -174,21 +175,36 @@ header li a:hover{border-radius:5px; background: #fff; color:#5b5b5b; }
 .jenny .miniaturas .thumbs img{ float:left; margin:0; padding:0;}
 .jenny .miniaturas .thumbs .vervideo{ float:right; background:url(../img/btn_vervideo.png) no-repeat 0 0; width:129px; height:39px; display:block; margin: 10px 20px 0 0; padding:0;}
 .jenny .miniaturas .thumbs h2{font-family: 'boogalooregular';font-size: 0.7em; color: #d70303;text-shadow: none;text-align: left; margin:1em auto;}
+/* #Media Queries
+================================================== */
 
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
+    /* Smaller than standard 960 (devices and browsers) */
+    @media only screen and (max-width: 959px) {}
 
-@media only screen and (min-width: 35em) {
+    /* Tablet Portrait size to standard 960 (devices and browsers) */
+    @media only screen and (min-width: 768px) and (max-width: 959px) {}
 
-}
+    /* All Mobile Sizes (devices and browser) */
+    @media only screen and (max-width: 767px) {
+        html,body{width: 100%;overflow: hidden;}
+        header{width: 100%; height: 65px; background:#022562 url("../img/logo-mobile.png") no-repeat center center; overflow: hidden;}
+        header ul{display: none; width: 100%;background:#022562;opacity:0.99;position: fixed; top: 65px; left: 0; }
+        header ul li{display: block;float: none; text-align: center; border:none; background:none; padding:0; border-bottom: solid 1px #666; margin: 0 5% ;}
+        header .mobile{display: inherit; }
+        header .menu{float:right; line-height: 60px; padding-right: 1.5%;}
+        .intro{padding: 0 3%;}
+        .datos{text-align: center;}
+        .datos .dato-small{margin:0 auto; display: block; overflow: hidden; float: none;}
+    }
+    /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+    @media only screen and (min-width: 480px) and (max-width: 767px) {
+        
+    }
 
-@media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
-
-}
+    /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+    @media only screen and (max-width: 479px) {
+       
+    }
 
 /* ==========================================================================
    Helper classes
