--- a/public/css/main.css
+++ b/public/css/main.css
@@ -75,13 +75,13 @@ h4.autor{font-family: Helvetica, Arial, sans-serif;height: 26px;text-transform: 
 .message{background:lightyellow; padding: 20px; border-radius:15px; }
 .mobile{display: none;}
 .desktop{display: inherit; }
-a:hover{opacity: 0.9;}
+a:hover{opacity: 0.85;}
 
 .btn-red{background: url("../img/bg-btn-dato.png") no-repeat; width: 130px; height: 46px; border:none; color: #fff;display: inline-block; text-decoration: none; text-align: center;line-height: 46px;}
 .btn-red:hover{opacity: 0.8;}
 
 /* HEADER */
-header{background:url("../img/bg-menu-top.png"); height: 51px; }
+header{background:url("../img/bg-menu-top.png") repeat-x; height: 71px; }
 header ul,
 header ul li{margin:0; padding: 0; list-style: none;}
 header ul{width: 810px; margin:0 auto;}
@@ -89,6 +89,14 @@ header ul li{float:left; padding: 12px 22px; padding-top: 8px; background: top l
 header ul li:first-child{background: none;}
 header li a{ color:#fff; font-size: 24px; line-height: 31px; text-decoration: none; padding: 2px; font-weight: normal; }
 header li a:hover{border-radius:5px; background: #fff; color:#5b5b5b; }
+header .submenu{width: 810px; margin: 0 auto; clear: both; overflow: hidden;}
+header .submenu .user{width:230px;float:right;padding: 5px; margin-top: 15px; border-radius: 10px; background: rgba(255,255,255,0.7); overflow: hidden;}
+header .submenu .user img{width: 35px; height: 35px; border-radius: 35px; display: block; float:right; padding: 3px 0 3px 10px;}
+header .submenu .user span{display: block; width: 180px; float: right;text-align: right;}
+header .submenu .userdata .user a{display: block; float: right; text-align: right; padding-left: 33px; color: #000; font-size: 13px; font-weight: normal; margin-top: -5px;}
+header .submenu .userdata{width:300px; float:right; text-align: right;}
+header .submenu .userdata a{color: #000;  font-size: 1em;  display: inline-block; padding: 3px 10px; text-decoration: none; text-transform: uppercase;}
+header .submenu .userdata a:hover{color: #333;}
 .logo{text-align: center; margin: 0 auto; display: block; padding-top: 20px; max-width: 80%;}
 
 
@@ -130,6 +138,12 @@ LOGIN
 #signup .mini-profile{display: none;}
 #signup .mini-profile img{width: 50px; height: 50px; border-radius:5px; float:left; background: #ccc; }
 #signup .mini-profile .name{float: left; display: block; padding-left: 10px;}
+
+
+#login form input{display: block; clear: both; width: 94%; margin: 5% 0; outline:none; padding: 3%; font-family: 'boogalooregular'; border-radius:5px; border:solid 1px #ccc; font-size: 15px;}
+#login .facebook-connect img{width: 100%;}
+#login hr{background: url("../img/hr-or.png") no-repeat; width: 259px; margin: 0 auto; display: block; height: 20px; margin: 10px auto; border:none;}
+#login .btn-red{border:none; width: 136px; margin: 5px auto; padding: 0;  }
 
 #thanks h3{margin: 0;}
 #thanks .btn-red{margin:0 auto; display: block;}
