--- a/public/css/main.css
+++ b/public/css/main.css
@@ -89,6 +89,7 @@ header ul li{float:left; padding: 12px 22px; padding-top: 8px; background: top l
 header ul li:first-child{background: none;}
 header li a{ color:#fff; font-size: 24px; line-height: 31px; text-decoration: none; padding: 2px; font-weight: normal; }
 header li a:hover{border-radius:5px; background: #fff; color:#5b5b5b; }
+header ul li.active a{border-radius:5px; background: #fff; color:#000;}
 header .submenu{width: 810px; margin: 0 auto; clear: both; overflow: hidden;}
 header .submenu .user{width:230px;float:right;padding: 5px; margin-top: 15px; border-radius: 10px; background: rgba(255,255,255,0.7); overflow: hidden;}
 header .submenu .user img{width: 35px; height: 35px; border-radius: 35px; display: block; float:right; margin: 3px 0 3px 10px; border:solid 2px #666;}
